[package]
name = "certik-workbook"
description = "CertiK Workbook"
version = "0.1.0"
authors = ["Camden Smallwood <camden.smallwood@certik.org>"]
edition = "2018"

[package.metadata.bundle]
name = "CertiK Workbook"
identifier = "org.certik.workbook"
icon = ["osx/32x32.png", "osx/64x64.png", "osx/128x128.png", "osx/256x256.png, osx/512x512.png"]
version = "1.0.0"
copyright = "Copyright (c) CertiK 2020. All rights reserved."
category = "Developer Tool"
short_description = "CertiK Workbook"
long_description = """
CertiK Workbook
"""

[profile.release]
lto = true
opt-level = "s"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
web-view = "0.6.3"
tinyfiledialogs = "3.3.10"
comrak = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24.0"
